objects/ESC_Electronic_Request__c.object
<CustomObject>
    <fields>
        <fullName>ESC_Markets_Focus_Region_Bulk__c</fullName>
        <inlineHelpText>Enter multiple countries/ regions if more than 1 is queried/ corrected</inlineHelpText>
        <label>Markets Focus (Region) - Bulk</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>ESC_Market_Sector__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>To be confirmed</fullName>
                </value>
                <value>
                    <fullName>ASIA (Asia and Australia)</fullName>
                </value>
                <value>
                    <fullName>EMEA (Europe, Middle East and Africa)</fullName>
                </value>
                <value>
                    <fullName>Eurobonds</fullName>
                </value>
                <value>
                    <fullName>Global (to be used for mix of Regions)</fullName>
                </value>
                <value>
                    <fullName>NAFI (this will be Canada and US)</fullName>
                </value>
                <value>
                    <fullName>LATAM (All Latin &amp; Central America)</fullName>
                </value>
                <value>
                    <fullName>UK&amp;I (UK and Ireland)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ESC_Next_Update_Time__c</fullName>
        <label>Next Update Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ESC_Number_of_Instruments_Queried__c</fullName>
        <inlineHelpText>Enter the number of instruments or data points queried, if more than 1</inlineHelpText>
        <label>Number of Instruments Queried</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ESC_Priority__c</fullName>
        <label>Severity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1-High</fullName>
                </value>
                <value>
                    <fullName>2-Medium</fullName>
                </value>
                <value>
                    <fullName>3-Low</fullName>
                </value>
                <value>
                    <fullName>4-Non-Service Affecting</fullName>
                </value>
                <value>
                    <fullName>Null</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ESC_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Electronic Requests</relationshipLabel>
        <relationshipName>Electronic_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ESC_RIC__c</fullName>
        <inlineHelpText>This is an example RIC which needs to be provided by resolvers</inlineHelpText>
        <label>RIC</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ESC_Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ESC_Geographic_Impact__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Asia</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>Americas</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ESC_Rejection_Reason__c</fullName>
        <label>Rejection Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ESC_Request_Status__c</fullName>
        <label>Request Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending Review</fullName>
                    <default>true</default>
                    <label>Pending Review</label>
                </value>
                <value>
                    <fullName>Under Review</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Duplicate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ESC_Response_Time_Indicator__c</fullName>
        <formula>IF((NOW() - CreatedDate)*1440&lt;5,IMAGE(&quot;/img/samples/light_green.gif&quot;,&quot;Green&quot;, 20,40),IF((NOW() - CreatedDate)*1440&lt;10,IMAGE(&quot;/img/samples/light_yellow.gif&quot;,&quot;Yellow&quot;,20,40),IMAGE(&quot;/img/samples/light_red.gif&quot;,&quot;Red&quot;,20,40)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Response Time Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_SC_Product__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accelus Conflicts Compliance</fullName>
                </value>
                <value>
                    <fullName>Adfin++ Analytics</fullName>
                </value>
                <value>
                    <fullName>Advanced Data Hub (ADH)</fullName>
                </value>
                <value>
                    <fullName>Advanced Distribution Server (ADS)</fullName>
                </value>
                <value>
                    <fullName>Advanced News System</fullName>
                </value>
                <value>
                    <fullName>Advanced Transformation System (ATS)</fullName>
                </value>
                <value>
                    <fullName>Alert Server for Internet Suite</fullName>
                </value>
                <value>
                    <fullName>All-Purpose Marketfeed Server (AMS)</fullName>
                </value>
                <value>
                    <fullName>Application Adapters</fullName>
                </value>
                <value>
                    <fullName>ASSET4 assetmasterExecutive</fullName>
                </value>
                <value>
                    <fullName>ASSET4 assetmasterProfessional</fullName>
                </value>
                <value>
                    <fullName>ASSET4 ESG Datafeed</fullName>
                </value>
                <value>
                    <fullName>ASSET4 ESG Datafeed Comprehensive</fullName>
                </value>
                <value>
                    <fullName>ASSET4 ESG Datafeed Core</fullName>
                </value>
                <value>
                    <fullName>ASSET4 ESG Datafeed Free-to-Air</fullName>
                </value>
                <value>
                    <fullName>ASSET4 ESG Datafeed Premium</fullName>
                </value>
                <value>
                    <fullName>ASSET4 ESG Datafeed Standard Basic</fullName>
                </value>
                <value>
                    <fullName>ASSET4 ESG Datafeed Standard Enhanced</fullName>
                </value>
                <value>
                    <fullName>AthenaSpreader</fullName>
                </value>
                <value>
                    <fullName>AthenaTrader</fullName>
                </value>
                <value>
                    <fullName>Audio/Video Webcasting</fullName>
                </value>
                <value>
                    <fullName>basis point (Weekly Print Publication/Asia-Pacific focused)</fullName>
                </value>
                <value>
                    <fullName>BETA Global</fullName>
                </value>
                <value>
                    <fullName>BETA Link</fullName>
                </value>
                <value>
                    <fullName>BETA Systems</fullName>
                </value>
                <value>
                    <fullName>Boardlink</fullName>
                </value>
                <value>
                    <fullName>BridgeFeed API</fullName>
                </value>
                <value>
                    <fullName>CDO Intelligence</fullName>
                </value>
                <value>
                    <fullName>Chinese Private Wealth Management</fullName>
                </value>
                <value>
                    <fullName>Citywatch</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ESC_Service_Affected__c</fullName>
        <label>Service Affected</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ESC_Source__c</fullName>
        <label>Source of Incident</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TR</fullName>
                </value>
                <value>
                    <fullName>Third Party</fullName>
                </value>
                <value>
                    <fullName>Exchange</fullName>
                </value>
                <value>
                    <fullName>Source</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ESC_Strategic_client_flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Strategic client flag</label>
        <type>Checkbox</type>
    </fields>
    <label>Hot Topic Request</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Helpdesk_View</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>ESC_Request_Status__c</columns>
        <columns>ESC_Priority__c</columns>
        <columns>ESC_Service_Affected__c</columns>
        <columns>ESC_Geographic_Impact__c</columns>
        <columns>ESC_Rejection_Reason__c</columns>
        <columns>ESC_Case__c</columns>
        <filterScope>Everything</filterScope>
        <label>Helpdesk View</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>EFR-{000000}</displayFormat>
        <label>Electronic  Request</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Hot Topic Requests</pluralLabel>
    <recordTypes>
        <fullName>HotTopic_AccountableResolver</fullName>
        <active>true</active>
        <description>Created for having Alert Status for Accountable Resolver as Confirmed</description>
        <label>HotTopic_ AccountableResolver</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>AccountableResolverAlertStatus</fullName>
        <active>true</active>
        <errorConditionFormula>AND($Profile.Name = &apos;Accountable Resolver&apos;, ISPICKVAL( ESC_Incident_Status__c ,&quot;None&quot;))</errorConditionFormula>
        <errorDisplayField>ESC_Incident_Status__c</errorDisplayField>
        <errorMessage>Alert Status Can&apos;t Be None</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AccountableResolverIncidentStartTime</fullName>
        <active>false</active>
        <errorConditionFormula>AND($Profile.Name = &apos;Accountable Resolver&apos;,ISBLANK(ESC_Incident_Start_Time__c))</errorConditionFormula>
        <errorDisplayField>ESC_Incident_Start_Time__c</errorDisplayField>
        <errorMessage>Incident Start Time need to be populated.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AccountableResolverNextUpdateTime</fullName>
        <active>false</active>
        <errorConditionFormula>AND($Profile.Name = &apos;Accountable Resolver&apos;,ISBLANK(ESC_Next_Update_Time__c))</errorConditionFormula>
        <errorDisplayField>ESC_Next_Update_Time__c</errorDisplayField>
        <errorMessage>Next Update Time need to be populated.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AccountableResolverPriority</fullName>
        <active>false</active>
        <errorConditionFormula>AND($Profile.Name = &apos;Accountable Resolver&apos;,ISPICKVAL( ESC_Priority__c , &apos;&apos;))</errorConditionFormula>
        <errorDisplayField>ESC_Priority__c</errorDisplayField>
        <errorMessage>Severity need to be populated.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AccountableResolverRequestSource</fullName>
        <active>false</active>
        <errorConditionFormula>AND($Profile.Name = &apos;Accountable Resolver&apos;,ISPICKVAL( ESC_Source__c , &apos;&apos;))</errorConditionFormula>
        <errorDisplayField>ESC_Source__c</errorDisplayField>
        <errorMessage>Request Source need to be populated.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AccountableResolverServiceAffected</fullName>
        <active>false</active>
        <errorConditionFormula>AND($Profile.Name = &apos;Accountable Resolver&apos;,ISBLANK(ESC_Service_Affected__c))</errorConditionFormula>
        <errorDisplayField>ESC_Service_Affected__c</errorDisplayField>
        <errorMessage>Service Affected need to be populated.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ElectronicRequestCannotBeEdited</fullName>
        <active>true</active>
        <description>Electronic Request with status other &quot;Pending Review&quot; can not be edited by Helpdesk Agent or Helpdesk Manager</description>
        <errorConditionFormula>AND(NOT(ISNEW()),OR($Profile.Name &lt;&gt;&apos;System Administrator&apos;,$Profile.Name &lt;&gt; &apos;Integration&apos;,$Profile.Name &lt;&gt;&apos;API&apos;),OR($Profile.Name  = &apos;Helpdesk Agent&apos;,$Profile.Name  = &apos;Helpdesk Manager&apos;,$Profile.Name  = &apos;Accountable Resolver&apos;,$Profile.Name  =  $Label.CCSProfileName,$Profile.Name  = &apos;GPT&apos;))</errorConditionFormula>
        <errorMessage>Your Profile&apos;s Permission does not allow you to edit the form upon submission.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>HotTopicMandatoryForDuplicate</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISBLANK(ESC_Case__c),ISPICKVAL(ESC_Request_Status__c, &apos;Duplicate&apos;), OR($Profile.Name &lt;&gt;&apos;System Administrator&apos;,$Profile.Name &lt;&gt; &apos;Integration&apos;,$Profile.Name &lt;&gt;&apos;API&apos;))</errorConditionFormula>
        <errorDisplayField>ESC_Case__c</errorDisplayField>
        <errorMessage>Please populate with applicable Hot Topic number</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RejectionReasonMandatoryForRejected</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISBLANK(ESC_Rejection_Reason__c),ISPICKVAL(ESC_Request_Status__c, &apos;Rejected&apos;), OR($Profile.Name &lt;&gt;&apos;System Administrator&apos;,$Profile.Name &lt;&gt; &apos;Integration&apos;,$Profile.Name &lt;&gt;&apos;API&apos;))</errorConditionFormula>
        <errorDisplayField>ESC_Rejection_Reason__c</errorDisplayField>
        <errorMessage>Please provide a reason for rejecting this request</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RequestStatusForHelpDeskProfiles</fullName>
        <active>true</active>
        <errorConditionFormula>AND( NOT(ISPICKVAL(ESC_Request_Status__c, &apos;Pending Review&apos;)),OR($Profile.Name &lt;&gt;&apos;System Administrator&apos;,$Profile.Name &lt;&gt; &apos;Integration&apos;,$Profile.Name &lt;&gt;&apos;API&apos;),OR($Profile.Name = &apos;Helpdesk Agent&apos;,$Profile.Name = &apos;Helpdesk Manager&apos;,$Profile.Name=&apos;Accountable Resolver&apos;,$Profile.Name=&apos;GPT&apos;,$Profile.Name=$Label.CCSProfileName))</errorConditionFormula>
        <errorMessage>The HT Request has been submitted to SCT for review and no further edits are allowed unless the request has been returned to your queue.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validation_for_SCT_Queue</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISNEW()),ISPICKVAL(ESC_Request_Status__c,&apos;Pending Review&apos;),OR($Profile.Name &lt;&gt;&apos;System Administrator&apos;,$Profile.Name &lt;&gt; &apos;Integration&apos;,$Profile.Name &lt;&gt;&apos;API&apos;),OR($Profile.Name = &apos;Service Communication&apos;))</errorConditionFormula>
        <errorMessage>SCT is not allowed to edit the HT request without accepting from queue.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>validation_on_HT_Request_Creation_for_Ac</fullName>
        <active>false</active>
        <errorConditionFormula>AND($Profile.Name =&apos;Accountable Resolver&apos;,OR(ISBLANK(ESC_Service_Affected__c) ,           
ISBLANK(ESC_Incident_Start_Time__c) , 
ISBLANK(ESC_Next_Update_Time__c) , 
ISBLANK(ESC_Incident_Title__c) , 
ISBLANK(ESC_Incident_Details__c),ISPICKVAL(ESC_Source__c,&apos;&apos;),ISPICKVAL(ESC_Priority__c,&apos;&apos;) ))</errorConditionFormula>
        <errorMessage>To create Hot Topic Request, the fields &apos;Severity&apos;,&apos;Service Affected&apos;,&apos;Request Source&apos;,&apos;Incident Start Time&apos;,&apos;Next Update Time&apos;,&apos;Incident Title&apos;,&apos;Incident Details&apos; and &apos;product&apos; need to be populated.</errorMessage>
    </validationRules>
</CustomObject>